--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<!doctypehtml><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><title>Kielo — Immersive Finnish Learning with AI</title><style>body,html{height:100%;margin:0}.frame{position:fixed;inset:0;width:100%;height:100%;border:0}body{background:#0b0c0f}</style><iframe allow="fullscreen; autoplay; clipboard-write"class=frame loading=lazy referrerpolicy=strict-origin-when-cross-origin src=https://cf-worker.kielo.app/ title="Canva design"></iframe><noscript><p style=position:fixed;inset:0;display:grid;place-items:center;color:#e6e6e6>JavaScript is required to display the embed. <a href=https://cf-worker.kielo.app/ rel="noopener noreferrer"target=_blank>Open in a new tab</a>.</p></noscript>
+<!doctype html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8" />
+      <meta content="width=device-width,initial-scale=1" name="viewport" />
+      <title>Kielo — Immersive Finnish Learning with AI</title>
+      <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
+      <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+      <style>
+         body,
+         html {
+            height: 100%;
+            margin: 0;
+         }
+         .frame {
+            position: fixed;
+            inset: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+         }
+         body {
+            background: #0b0c0f;
+         }
+      </style>
+   </head>
+   <body>
+      <iframe
+         allow="fullscreen; autoplay; clipboard-write"
+         class="frame"
+         loading="lazy"
+         referrerpolicy="strict-origin-when-cross-origin"
+         src="https://cf-worker.kielo.app/"
+         title="Canva design"
+      ></iframe>
+      <noscript>
+         <p
+            style="
+               position: fixed;
+               inset: 0;
+               display: grid;
+               place-items: center;
+               color: #e6e6e6;
+            "
+         >
+            JavaScript is required to display the embed.
+            <a
+               href="https://cf-worker.kielo.app/"
+               rel="noopener noreferrer"
+               target="_blank"
+               >Open in a new tab</a
+            >.
+         </p></noscript
+      >
+   </body>
+</html>
