--- a/cookies.html
+++ b/cookies.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookie Policy - Kielo</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-  <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
-  <style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cookie Policy - Kielo</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
+    <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif;
         line-height: 1.6;
         color: #333;
         max-width: 800px;
@@ -18,7 +33,9 @@
         padding: 20px;
         background-color: #f9f9f9;
       }
-      h1, h2, h3 {
+      h1,
+      h2,
+      h3 {
         color: #11182c;
         border-bottom: 1px solid #e5e7eb;
         padding-bottom: 10px;
@@ -27,6 +44,14 @@
         text-align: center;
         border-bottom: none;
         margin-bottom: 10px;
+      }
+      .header {
+        text-align: center;
+      }
+      .logo {
+        height: 60px;
+        width: auto;
+        margin-bottom: 0.5rem;
       }
       .container {
         background-color: #fff;
@@ -46,130 +71,233 @@
         padding: 15px;
         margin-bottom: 25px;
       }
-      .cookie-notice strong { color: #92400e; }
-      a { color: #7c3aed; text-decoration: none; }
-      a:hover { text-decoration: underline; }
-      ul, ol { padding-left: 20px; }
-      li { margin-bottom: 10px; }
-      .cookie-table { width: 100%; border-collapse: collapse; margin: 15px 0; }
-      .cookie-table th, .cookie-table td {
-        border: 1px solid #e5e7eb; padding: 12px; text-align: left; vertical-align: top;
+      .cookie-notice strong {
+        color: #92400e;
       }
-      .cookie-table th { background-color: #f9fafb; font-weight: 600; }
-      .cookie-type { padding: 15px; border-radius: 6px; margin: 15px 0; }
-      .small { color: #6b7280; font-size: 0.9rem; }
-      .kbd { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; background: #f3f4f6; border: 1px solid #e5e7eb; border-radius: 4px; padding: 0 6px; }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Cookie Policy</h1>
-    <p class="last-updated">Last Updated: August 11, 2025</p>
-    <div class="cookie-notice">
-      <strong>EU ePrivacy Directive Compliance:</strong> This Cookie Policy explains how Kielo App uses cookies and similar technologies in compliance with EU ePrivacy Directive and GDPR requirements.
-    </div>
-    <h2>1. What Are Cookies</h2>
-    <p>Cookies are small text files that are placed on your device when you use our mobile application. They help us provide you with a better user experience by remembering your preferences and improving our services.</p>
-    <p>Similar technologies we use include local storage, session storage, device identifiers, and other tracking technologies that serve similar purposes to cookies.</p>
-    <h2>2. How We Use Cookies</h2>
-    <p>We use cookies and similar technologies for the following purposes:</p>
-    <ul>
-      <li><strong>Essential functionality:</strong> To make our app work properly and securely.</li>
-      <li><strong>User preferences:</strong> To remember your settings and choices.</li>
-      <li><strong>Performance analysis:</strong> To understand how you use our app and improve it.</li>
-      <li><strong>Security:</strong> To protect against fraud and maintain security.</li>
-      <li><strong>Personalization:</strong> To customize your learning experience.</li>
-    </ul>
-    <h2>3. Types of Cookies We Use</h2>
-    <div class="cookie-type essential-cookies">
-      <h3>🔒 Strictly Necessary Cookies</h3>
-      <p><strong>Purpose:</strong> These cookies are essential for the app to function and cannot be disabled.</p>
-      <p><strong>Legal Basis:</strong> Legitimate interests (service provision).</p>
-      <p><strong>Examples:</strong></p>
+      a {
+        color: #7c3aed;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      ul,
+      ol {
+        padding-left: 20px;
+      }
+      li {
+        margin-bottom: 10px;
+      }
+      .cookie-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 15px 0;
+      }
+      .cookie-table th,
+      .cookie-table td {
+        border: 1px solid #e5e7eb;
+        padding: 12px;
+        text-align: left;
+        vertical-align: top;
+      }
+      .cookie-table th {
+        background-color: #f9fafb;
+        font-weight: 600;
+      }
+      .cookie-type {
+        padding: 15px;
+        border-radius: 6px;
+        margin: 15px 0;
+      }
+      .small {
+        color: #6b7280;
+        font-size: 0.9rem;
+      }
+      .kbd {
+        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+          "Liberation Mono", "Courier New", monospace;
+        background: #f3f4f6;
+        border: 1px solid #e5e7eb;
+        border-radius: 4px;
+        padding: 0 6px;
+      }
+    </style>
+  </head>
+  <body>
+    <header class="header">
+      <img src="/assets/icon-3d-ios.png" alt="Kielo App Logo" class="logo" />
+    </header>
+    <div class="container">
+      <h1>Cookie Policy</h1>
+      <p class="last-updated">Last Updated: August 11, 2025</p>
+      <div class="cookie-notice">
+        <strong>EU ePrivacy Directive Compliance:</strong> This Cookie Policy
+        explains how Kielo App uses cookies and similar technologies in
+        compliance with EU ePrivacy Directive and GDPR requirements.
+      </div>
+      <h2>1. What Are Cookies</h2>
+      <p>
+        Cookies are small text files that are placed on your device when you use
+        our mobile application. They help us provide you with a better user
+        experience by remembering your preferences and improving our services.
+      </p>
+      <p>
+        Similar technologies we use include local storage, session storage,
+        device identifiers, and other tracking technologies that serve similar
+        purposes to cookies.
+      </p>
+      <h2>2. How We Use Cookies</h2>
+      <p>We use cookies and similar technologies for the following purposes:</p>
       <ul>
-        <li>Authentication/session tokens to keep you logged in</li>
-        <li>Security cookies to prevent fraud and abuse (e.g., rate limiting, CSRF protection)</li>
-        <li>Load balancing and service availability cookies</li>
+        <li>
+          <strong>Essential functionality:</strong> To make our app work
+          properly and securely.
+        </li>
+        <li>
+          <strong>User preferences:</strong> To remember your settings and
+          choices.
+        </li>
+        <li>
+          <strong>Performance analysis:</strong> To understand how you use our
+          app and improve it.
+        </li>
+        <li>
+          <strong>Security:</strong> To protect against fraud and maintain
+          security.
+        </li>
+        <li>
+          <strong>Personalization:</strong> To customize your learning
+          experience.
+        </li>
       </ul>
+      <h2>3. Types of Cookies We Use</h2>
+      <div class="cookie-type essential-cookies">
+        <h3>🔒 Strictly Necessary Cookies</h3>
+        <p>
+          <strong>Purpose:</strong> These cookies are essential for the app to
+          function and cannot be disabled.
+        </p>
+        <p>
+          <strong>Legal Basis:</strong> Legitimate interests (service
+          provision).
+        </p>
+        <p><strong>Examples:</strong></p>
+        <ul>
+          <li>Authentication/session tokens to keep you logged in</li>
+          <li>
+            Security cookies to prevent fraud and abuse (e.g., rate limiting,
+            CSRF protection)
+          </li>
+          <li>Load balancing and service availability cookies</li>
+        </ul>
+      </div>
+      <div class="cookie-type functional-cookies">
+        <h3>⚙️ Functional (Preference) Cookies</h3>
+        <p>
+          <strong>Purpose:</strong> Remember choices you make (such as language,
+          region, or accessibility settings) to provide enhanced, more personal
+          features.
+        </p>
+        <p><strong>Legal Basis:</strong> Consent (opt-in).</p>
+      </div>
+      <div class="cookie-type analytics-cookies">
+        <h3>📊 Analytics Cookies</h3>
+        <p>
+          <strong>Purpose:</strong> Help us understand how the app is used so we
+          can improve performance and features.
+        </p>
+        <p><strong>Legal Basis:</strong> Consent (opt-in).</p>
+        <p class="small">
+          Examples include privacy-centric analytics (e.g., self-hosted) or
+          third-party analytics that aggregate usage statistics. These are
+          disabled by default unless you opt in.
+        </p>
+      </div>
+      <div class="cookie-type marketing-cookies">
+        <h3>🎯 Marketing Cookies</h3>
+        <p>
+          <strong>Purpose:</strong> Used to deliver content and ads that are
+          more relevant to you, and to measure the effectiveness of campaigns.
+        </p>
+        <p><strong>Legal Basis:</strong> Consent (opt-in).</p>
+        <p class="small">
+          If used, these may be set by us or our partners and may track you
+          across apps and websites. Disabled by default unless you opt in.
+        </p>
+      </div>
+      <h2>4. Cookies & Technologies We May Use</h2>
+      <p class="small">
+        The items below are representative examples and may vary depending on
+        your choices and region.
+      </p>
+      <table class="cookie-table" aria-describedby="cookie-table-desc">
+        <caption id="cookie-table-desc" class="small">
+          Examples of cookies/identifiers and their purposes
+        </caption>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Provider</th>
+            <th>Purpose</th>
+            <th>Type</th>
+            <th>Expiration</th>
+            <th>Category</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>kielo_session</td>
+            <td>Kielo</td>
+            <td>Maintains your logged-in session</td>
+            <td>First‑party cookie / secure storage</td>
+            <td>Session</td>
+            <td>Strictly Necessary</td>
+          </tr>
+          <tr>
+            <td>kielo_csrf</td>
+            <td>Kielo</td>
+            <td>
+              Protects forms and API calls from cross‑site request forgery
+            </td>
+            <td>First‑party cookie</td>
+            <td>Session</td>
+            <td>Strictly Necessary</td>
+          </tr>
+          <tr>
+            <td>prefs_lang</td>
+            <td>Kielo</td>
+            <td>Remembers your language preference</td>
+            <td>Local storage</td>
+            <td>Up to 12 months</td>
+            <td>Functional</td>
+          </tr>
+          <tr>
+            <td>_analytics_id</td>
+            <td>Kielo / Analytics provider</td>
+            <td>Aggregated usage metrics (pages viewed, device type)</td>
+            <td>First‑party cookie / SDK identifier</td>
+            <td>13 months (EU default)</td>
+            <td>Analytics</td>
+          </tr>
+          <tr>
+            <td>_marketing_id</td>
+            <td>Advertising partner</td>
+            <td>Ad personalization and campaign attribution</td>
+            <td>Third‑party identifier</td>
+            <td>3–6 months</td>
+            <td>Marketing</td>
+          </tr>
+        </tbody>
+      </table>
+      <hr />
+      <p class="small">
+        <strong>Legal bases:</strong> Strictly necessary cookies are used based
+        on our legitimate interests to provide a secure, functioning service.
+        Functional, Analytics, and Marketing cookies are used only with your
+        consent. You can withdraw consent at any time via the controls above
+        without affecting the lawfulness of processing before withdrawal.
+      </p>
     </div>
-    <div class="cookie-type functional-cookies">
-      <h3>⚙️ Functional (Preference) Cookies</h3>
-      <p><strong>Purpose:</strong> Remember choices you make (such as language, region, or accessibility settings) to provide enhanced, more personal features.</p>
-      <p><strong>Legal Basis:</strong> Consent (opt-in).</p>
-    </div>
-    <div class="cookie-type analytics-cookies">
-      <h3>📊 Analytics Cookies</h3>
-      <p><strong>Purpose:</strong> Help us understand how the app is used so we can improve performance and features.</p>
-      <p><strong>Legal Basis:</strong> Consent (opt-in).</p>
-      <p class="small">Examples include privacy-centric analytics (e.g., self-hosted) or third-party analytics that aggregate usage statistics. These are disabled by default unless you opt in.</p>
-    </div>
-    <div class="cookie-type marketing-cookies">
-      <h3>🎯 Marketing Cookies</h3>
-      <p><strong>Purpose:</strong> Used to deliver content and ads that are more relevant to you, and to measure the effectiveness of campaigns.</p>
-      <p><strong>Legal Basis:</strong> Consent (opt-in).</p>
-      <p class="small">If used, these may be set by us or our partners and may track you across apps and websites. Disabled by default unless you opt in.</p>
-    </div>
-    <h2>4. Cookies & Technologies We May Use</h2>
-    <p class="small">The items below are representative examples and may vary depending on your choices and region.</p>
-    <table class="cookie-table" aria-describedby="cookie-table-desc">
-      <caption id="cookie-table-desc" class="small">
-        Examples of cookies/identifiers and their purposes
-      </caption>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Provider</th>
-          <th>Purpose</th>
-          <th>Type</th>
-          <th>Expiration</th>
-          <th>Category</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>kielo_session</td>
-          <td>Kielo</td>
-          <td>Maintains your logged-in session</td>
-          <td>First‑party cookie / secure storage</td>
-          <td>Session</td>
-          <td>Strictly Necessary</td>
-        </tr>
-        <tr>
-          <td>kielo_csrf</td>
-          <td>Kielo</td>
-          <td>Protects forms and API calls from cross‑site request forgery</td>
-          <td>First‑party cookie</td>
-          <td>Session</td>
-          <td>Strictly Necessary</td>
-        </tr>
-        <tr>
-          <td>prefs_lang</td>
-          <td>Kielo</td>
-          <td>Remembers your language preference</td>
-          <td>Local storage</td>
-          <td>Up to 12 months</td>
-          <td>Functional</td>
-        </tr>
-        <tr>
-          <td>_analytics_id</td>
-          <td>Kielo / Analytics provider</td>
-          <td>Aggregated usage metrics (pages viewed, device type)</td>
-          <td>First‑party cookie / SDK identifier</td>
-          <td>13 months (EU default)</td>
-          <td>Analytics</td>
-        </tr>
-        <tr>
-          <td>_marketing_id</td>
-          <td>Advertising partner</td>
-          <td>Ad personalization and campaign attribution</td>
-          <td>Third‑party identifier</td>
-          <td>3–6 months</td>
-          <td>Marketing</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr>
-    <p class="small"><strong>Legal bases:</strong> Strictly necessary cookies are used based on our legitimate interests to provide a secure, functioning service. Functional, Analytics, and Marketing cookies are used only with your consent. You can withdraw consent at any time via the controls above without affecting the lawfulness of processing before withdrawal.</p>
-  </div>
-</body>
+  </body>
 </html>
+
