--- a/support.html
+++ b/support.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support Center - Kielo</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -21,21 +35,11 @@
       }
       .header {
         text-align: center;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        padding: 40px 20px;
-        border-radius: 12px;
-        margin-bottom: 30px;
       }
-      .header h1 {
-        margin: 0;
-        font-size: 2.5em;
-        font-weight: 700;
-      }
-      .header p {
-        margin: 10px 0 0 0;
-        font-size: 1.1em;
-        opacity: 0.9;
+      .logo {
+        height: 60px;
+        width: auto;
+        margin-bottom: 0.5rem;
       }
       .container {
         background-color: #fff;
@@ -176,10 +180,9 @@
     </style>
   </head>
   <body>
-    <div class="header">
-      <h1>Kielo Support Center</h1>
-      <p>We're here to help you on your language learning journey</p>
-    </div>
+    <header class="header">
+      <img src="/assets/icon-3d-ios.png" alt="Kielo App Logo" class="logo" />
+    </header>
 
     <div class="container">
       <h2>Quick Help</h2>
@@ -616,3 +619,4 @@
     </script>
   </body>
 </html>
+
