--- a/terms.html
+++ b/terms.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terms of Service - Kielo</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -30,6 +44,14 @@
         text-align: center;
         border-bottom: none;
         margin-bottom: 10px;
+      }
+      .header {
+        text-align: center;
+      }
+      .logo {
+        height: 60px;
+        width: auto;
+        margin-bottom: 0.5rem;
       }
       .container {
         background-color: #fff;
@@ -89,6 +111,9 @@
     </style>
   </head>
   <body>
+    <header class="header">
+      <img src="/assets/icon-3d-ios.png" alt="Kielo App Logo" class="logo" />
+    </header>
     <div class="container">
       <h1>Terms of Service</h1>
       <p class="last-updated">Last Updated: August 11, 2025</p>
