Update iframe and link to use proxy worker

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          class="frame"
          loading="lazy"
          referrerpolicy="strict-origin-when-cross-origin"
-         src="https://cf-worker.kielo.app/"
+         src="https://proxy-worker.kielo.app/?url=https://kielo.my.canva.site"
          title="Canva design"
       ></iframe>
       <noscript>
@@ -47,7 +47,7 @@
          >
             JavaScript is required to display the embed.
             <a
-               href="https://cf-worker.kielo.app/"
+               href="https://proxy-worker.kielo.app/?url=https://kielo.my.canva.site"
                rel="noopener noreferrer"
                target="_blank"
                >Open in a new tab</a
