--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@
          class="frame"
          loading="lazy"
          referrerpolicy="strict-origin-when-cross-origin"
-         src="https://proxy-worker.kielo.app/?url=https://kielo.my.canva.site"
+         src="https://proxy-worker.kielo.app/?url=https://kielo.my.canva.site/about-us"
          title="Canva design"
       ></iframe>
       <noscript>
