add Open Graph metadata

--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!doctype html>
 <html lang="en">
    <head>
+      <!-- Open Graph -->
+      <meta property="og:title" content="Kielo — Immersive Finnish Learning with AI" />
+      <meta property="og:description" content="Real News. Real Talk. Real Progress. Learn Finnish through immersive experiences powered by AI." />
+      <meta property="og:url" content="https://kielo.app/" />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="https://kielo.app/assets/feature.jpg" />
+      <meta property="og:site_name" content="Kielo" />
+
+      <!-- Twitter Card -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="Kielo — Immersive Finnish Learning with AI" />
+      <meta name="twitter:description" content="Real News. Real Talk. Real Progress. Learn Finnish through immersive experiences powered by AI." />
+      <meta name="twitter:image" content="https://kielo.app/assets/feature.jpg" />
+      <meta name="twitter:site" content="@kielo.app" />
+
       <meta charset="utf-8" />
       <meta content="width=device-width,initial-scale=1" name="viewport" />
+
       <title>Kielo — Immersive Finnish Learning with AI</title>
       <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
