--- a/labels.html
+++ b/labels.html
@@ -29,7 +29,7 @@
         --text-color: #11182c;
         --secondary-text-color: #4b5563;
         --background-color: #f8f9ff;
-        --container-background: #ffffff;
+        --container-background: #fff;
         --border-color: #e5e7eb;
       }
       body {
