--- a/index.html
+++ b/index.html
@@ -1,76 +1,102 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-   <head>
+  <head>
+    <title>Kielo — Immersive Finnish Learning with AI</title>
 
-      <title>Kielo — Immersive Finnish Learning with AI</title>
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Kielo — Immersive Finnish Learning with AI"
+    />
+    <meta
+      property="og:description"
+      content="Real News. Real Talk. Real Progress. Learn Finnish through immersive experiences powered by AI."
+    />
+    <meta property="og:url" content="https://kielo.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://kielo.app/assets/feature.jpg" />
+    <meta property="og:site_name" content="Kielo" />
 
-      <!-- Open Graph -->
-      <meta property="og:title" content="Kielo — Immersive Finnish Learning with AI" />
-      <meta property="og:description" content="Real News. Real Talk. Real Progress. Learn Finnish through immersive experiences powered by AI." />
-      <meta property="og:url" content="https://kielo.app/" />
-      <meta property="og:type" content="website" />
-      <meta property="og:image" content="https://kielo.app/assets/feature.jpg" />
-      <meta property="og:site_name" content="Kielo" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Kielo — Immersive Finnish Learning with AI"
+    />
+    <meta
+      name="twitter:description"
+      content="Real News. Real Talk. Real Progress. Learn Finnish through immersive experiences powered by AI."
+    />
+    <meta name="twitter:image" content="https://kielo.app/assets/feature.jpg" />
+    <meta name="twitter:site" content="@kielo.app" />
 
-      <!-- Twitter Card -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:title" content="Kielo — Immersive Finnish Learning with AI" />
-      <meta name="twitter:description" content="Real News. Real Talk. Real Progress. Learn Finnish through immersive experiences powered by AI." />
-      <meta name="twitter:image" content="https://kielo.app/assets/feature.jpg" />
-      <meta name="twitter:site" content="@kielo.app" />
+    <meta charset="utf-8" />
+    <meta content="width=device-width,initial-scale=1" name="viewport" />
 
-      <meta charset="utf-8" />
-      <meta content="width=device-width,initial-scale=1" name="viewport" />
-      
-      <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-      <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
-      <style>
-         body,
-         html {
-            height: 100%;
-            margin: 0;
-         }
-         .frame {
-            position: fixed;
-            inset: 0;
-            width: 100%;
-            height: 100%;
-            border: 0;
-         }
-         body {
-            background: #0b0c0f;
-         }
-      </style>
-   </head>
-   <body>
-      <iframe
-         allow="fullscreen; autoplay; clipboard-write"
-         class="frame"
-         loading="lazy"
-         referrerpolicy="strict-origin-when-cross-origin"
-         src="https://proxy-worker.kielo.app/?url=https://kielo.my.canva.site"
-         title="Canva design"
-      ></iframe>
-      <noscript>
-         <p
-            style="
-               position: fixed;
-               inset: 0;
-               display: grid;
-               place-items: center;
-               color: #e6e6e6;
-            "
-         >
-            JavaScript is required to display the embed.
-            <a
-               href="https://proxy-worker.kielo.app/?url=https://kielo.my.canva.site"
-               rel="noopener noreferrer"
-               target="_blank"
-               >Open in a new tab</a
-            >.
-         </p></noscript
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
+    <style>
+      body,
+      html {
+        height: 100%;
+        margin: 0;
+      }
+      .frame {
+        position: fixed;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+      }
+      body {
+        background: #fff;
+      }
+    </style>
+  </head>
+  <body>
+    <iframe
+      allow="fullscreen; autoplay; clipboard-write"
+      class="frame"
+      loading="lazy"
+      referrerpolicy="strict-origin-when-cross-origin"
+      src="https://proxy-worker.kielo.app/https://kielo.my.canva.site"
+      title="Canva design"
+    ></iframe>
+    <noscript>
+      <p
+        style="
+          position: fixed;
+          inset: 0;
+          display: grid;
+          place-items: center;
+          color: #e6e6e6;
+        "
       >
-   </body>
+        JavaScript is required to display the embed.
+        <a
+          href="https://proxy-worker.kielo.app/https://kielo.my.canva.site"
+          rel="noopener noreferrer"
+          target="_blank"
+          >Open in a new tab</a
+        >.
+      </p></noscript
+    >
+  </body>
 </html>
+
