update: company info

--- a/labels.html
+++ b/labels.html
@@ -188,7 +188,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2024 [Your Legal Company Name]. All rights reserved.</p>
+      <p>&copy; 2025 Erminai Oy. All rights reserved.</p>
     </footer>
   </body>
 </html>
