--- a/terms.html
+++ b/terms.html
@@ -129,11 +129,9 @@
       <div class="company-info">
         <p><strong>Service Provider:</strong> Kielo.app</p>
         <p>
-          <strong>Business Registration:</strong> [EU Business Registration
-          Number]
+          <strong>Business ID:</strong> 3571359-6
         </p>
         <p><strong>EU Headquarters:</strong> Helsinki, Finland</p>
-        <p><strong>VAT Number:</strong> [EU VAT Number]</p>
         <p>
           <strong>Contact Email:</strong>
           <a href="mailto:connect+legal@kielo.app">connect+legal@kielo.app</a>
