update: Company name

--- a/terms.html
+++ b/terms.html
@@ -127,7 +127,7 @@
 
       <h2>1. Company Information</h2>
       <div class="company-info">
-        <p><strong>Service Provider:</strong> Kielo.app</p>
+        <p><strong>Service Provider:</strong> Erminai Oy</p>
         <p>
           <strong>Business ID:</strong> 3571359-6
         </p>
