update: Privacy Policy

--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,8 +24,9 @@
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif;
+        font-family:
+          -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+          Arial, sans-serif;
         line-height: 1.6;
         color: #333;
         max-width: 800px;
@@ -122,7 +123,7 @@
     </header>
     <div class="container">
       <h1>Privacy Policy</h1>
-      <p class="last-updated">Last Updated: August 11, 2025</p>
+      <p class="last-updated">Last Updated: October 24, 2025</p>
 
       <div class="gdpr-notice">
         <strong>EU Users:</strong> This Privacy Policy complies with the General
@@ -134,7 +135,7 @@
 
       <h2>1. Data Controller Information</h2>
       <div class="data-controller">
-        <p><strong>Data Controller:</strong> Kielo App</p>
+        <p><strong>Data Controller:</strong> Erminai Oy (ID: 3571359-6)</p>
         <p>
           <strong>Contact Email:</strong>
           <a href="mailto:connect+privacy@kielo.app"
@@ -242,12 +243,50 @@
       <h3>4.4 Technical Data</h3>
       <ul>
         <li>
+          <strong>Device Information:</strong> Device type, operating system
+          version, app version, unique device identifiers (for app functionality
+          and troubleshooting)
+        </li>
+        <li>
           <strong>App Performance:</strong> Crash reports, error logs
           (anonymized)
         </li>
         <li>
           <strong>Security Logs:</strong> Login attempts, security-related
           events
+        </li>
+        <li>
+          <strong>Network Data:</strong> IP address, connection type (for
+          security and performance monitoring)
+        </li>
+      </ul>
+
+      <h3>4.5 Subscription and Payment Data</h3>
+      <ul>
+        <li>
+          <strong>Purchase History:</strong> Subscription status, purchase
+          receipts, billing information (processed securely through app stores)
+        </li>
+        <li>
+          <strong>RevenueCat Data:</strong> Subscription management data handled
+          by our payment processor (RevenueCat) for billing and subscription
+          continuity
+        </li>
+      </ul>
+
+      <h3>4.6 Permissions and Sensor Data</h3>
+      <ul>
+        <li>
+          <strong>Microphone Access:</strong> Voice recordings for AI
+          conversation practice (temporary processing, not stored)
+        </li>
+        <li>
+          <strong>Camera Access:</strong> Optional profile pictures and visual
+          learning content
+        </li>
+        <li>
+          <strong>Push Notifications:</strong> Device tokens for sending
+          learning reminders and app updates (can be disabled)
         </li>
       </ul>
 
@@ -302,6 +341,16 @@
           <strong>Authentication:</strong> Google/Apple for social login
           (minimal data exchange)
         </li>
+        <li>
+          <strong>Payment Processing:</strong> RevenueCat for subscription
+          management and billing (handles payment data securely, we receive only
+          subscription status and receipts)
+        </li>
+        <li>
+          <strong>App Store Services:</strong> Apple App Store and Google Play
+          Store receive technical data for app distribution, crash reporting,
+          and analytics
+        </li>
       </ul>
 
       <h3>6.2 Legal Requirements</h3>
@@ -347,6 +396,16 @@
             <td>Voice Recordings</td>
             <td>24-48 hours (processing only)</td>
             <td>Real-time speech recognition</td>
+          </tr>
+          <tr>
+            <td>Subscription Data</td>
+            <td>7 years (legal requirement) or account deletion</td>
+            <td>Tax compliance and subscription management</td>
+          </tr>
+          <tr>
+            <td>Device & Technical Data</td>
+            <td>2 years or account deletion</td>
+            <td>Security and service optimization</td>
           </tr>
           <tr>
             <td>Support Communications</td>
@@ -452,7 +511,56 @@
         information from a child under 13 should contact us immediately.
       </p>
 
-      <h2>12. Cookies and Similar Technologies</h2>
+      <h2>12. Mobile App Permissions</h2>
+      <p>
+        Our mobile app requests certain permissions to provide core
+        functionality. You can manage these permissions through your device
+        settings:
+      </p>
+      <ul>
+        <li>
+          <strong>Microphone:</strong> Required for AI conversation practice and
+          speech recognition features
+        </li>
+        <li>
+          <strong>Camera:</strong> Optional for profile pictures and visual
+          learning content
+        </li>
+        <li>
+          <strong>Notifications:</strong> Optional for learning reminders and
+          app updates (can be disabled anytime)
+        </li>
+        <li>
+          <strong>Storage:</strong> For saving learning progress and offline
+          content
+        </li>
+      </ul>
+      <p>
+        We only access these permissions when you explicitly grant them and use
+        the data solely for the stated purposes.
+      </p>
+
+      <h2>13. App Store Data Sharing</h2>
+      <p>
+        When you download and use our app through the Apple App Store or Google
+        Play Store, certain data is automatically shared with the app stores for
+        distribution and analytics purposes:
+      </p>
+      <ul>
+        <li>App installation and usage statistics</li>
+        <li>Crash reports and performance data</li>
+        <li>Device and operating system information</li>
+        <li>
+          Purchase and subscription data (handled by app store payment systems)
+        </li>
+      </ul>
+      <p>
+        This data sharing is required for app store compliance and cannot be
+        disabled. Please refer to the app store's privacy policy for details on
+        their data practices.
+      </p>
+
+      <h2>14. Cookies and Similar Technologies</h2>
       <p>We use cookies and similar technologies for:</p>
       <ul>
         <li>
@@ -473,7 +581,7 @@
         Disabling certain cookies may limit app functionality.
       </p>
 
-      <h2>13. Changes to This Privacy Policy</h2>
+      <h2>15. Changes to This Privacy Policy</h2>
       <p>
         We may update this Privacy Policy periodically to reflect changes in our
         practices or legal requirements. We will:
@@ -494,7 +602,7 @@
         acceptance of the updated policy.
       </p>
 
-      <h2>14. Supervisory Authority</h2>
+      <h2>16. Supervisory Authority</h2>
       <p>
         If you are unsatisfied with our response to your privacy concerns, you
         have the right to lodge a complaint with your local data protection
@@ -507,7 +615,7 @@
         >
       </p>
 
-      <h2>15. Contact Information</h2>
+      <h2>17. Contact Information</h2>
       <p>
         For privacy-related questions, requests, or concerns, please contact us:
       </p>
@@ -532,4 +640,3 @@
     </div>
   </body>
 </html>
-
